# CongressionalFundraisingViz

./: .env  .gitignore  Cargo.toml  README.md
congressional_fundraising_viz_macros/: Cargo.toml
congressional_fundraising_viz_macros/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220903_102025_members.rs  m20220918_161145_committees.rs  m20220918_214426_independent_expenditures.rs  m20221005_181214_committee_contributions.rs
migrations/: 001_members.sql
scraping/: Cargo.toml
src/: bulk_data.rs  lib.rs  main.rs  models.rs  query_root.rs  schema.rs
src/entities/: committee_contributions.rs  committees.rs  independent_expenditures.rs  members.rs  mod.rs  prelude.rs  seaql_migrations.rs
