[package]
name = "citizensdivided"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.10"
warp = "0.3.2"
tokio = { version = "1.20.1", features = ["full"] }
dotenv = "0.15.0"
reqwest = "0.11.11"
url = "2.2.2"
sea-orm = { version = "^0.9.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
sea-schema = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "scraping"
