[package]
edition = '2021'
name = 'citizensdivided'
version = '0.1.0'

[dependencies]
async-trait = { version = "0.1.53" }
heck = { version = "0.4.0" }
itertools = { version = "0.10.3" }

# General API Crates
juniper = "0.15.10"
warp = "0.3.2"
tokio = { version = "1.20.1", features = ["full"] }
rocket = { version = "^0.5.0-rc.2", features = ["json"] }
url = "2.2.2"
reqwest = "0.11.11"
indicatif = "0.17.1"
dotenv = "0.15.0"
poem = { version = "1.3.29" }
tracing = { version = "0.1.34" }
tracing-subscriber = { version = "0.3.11" }

# Serde Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Sea ORM + Seaography (Graphql)
sea-orm = { version = "^0.9", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
sea-schema = "0.9.3"
async-graphql = { version = "4.0.10", features = ["decimal", "chrono", "dataloader"] }
async-graphql-rocket = "4.0.4"
async-graphql-poem = "4.0.10"
seaography = { version = "^0.1", features = [ "with-decimal", "with-chrono" ] }

[dev-dependencies]
serde_json = { version = '1.0.82' }

[workspace]
members = []

[[bin]]
name = "load_committees"
# name = "load_members"