[package]
name = "scraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
reqwest = "0.11.11"
tokio = { version = "1.20.1", features = ["full"] }

[[bin]]
name = "scraping"
path = "src/main.rs"
